package com.sep490.ecoverse_be.enums;

public enum PartnershipRewardStatus {
    PREPARING,
    SHIPPING,
    ARRIVED,
    DELIVERED,
    CONFIRMED
}
